--- a/Leila.html
+++ b/Leila.html
@@ -12,22 +12,27 @@
         <br>
         
         <section>
-        <label for="login">Login:</label>
-        <input type="text" name="login" id="login" placeholder="Username"/>
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username" placeholder="Enter your username"/>
 
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="Password">
+        <label for="password">Password:</label>
+        <input type="password" name="password" id="password" placeholder="Enter your password">
+
+        <input type="submit" value="Log in">
         </section>
-        
+
         <nav class="menu">
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">classes</a></li>
+              <li><a href="#">Classes</a></li>
               <li><a href="#">Healthy Weight Tools</a></li>
               <li><a href="#">Us</a></li>
             </ul>
         </nav>
     </header>
-   
+
+   <hr>
+  
+   <main></main>
 </body>
 </html>
