--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1><span style="color: rgb(128, 26, 26)">Contact Adrenalin centre</span></h1>
+    <h1><span style="color: rgb(128, 26, 26)">About Adrenalin centre</span></h1>
   </body>
 </html>
