--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1><span style="color: rgb(128, 26, 26)">About Adrenalin centre</span></h1>
+    <p>
+        At Adrenaline centre, we help you stay fit and strong with experienced trainers and a friendly space for every one. 
+    </p>
+
+    
   </body>
 </html>
