add table for team

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -8,9 +8,38 @@
   <body>
     <h1><span style="color: rgb(128, 26, 26)">About Adrenalin centre</span></h1>
     <p>
-        At Adrenaline centre, we help you stay fit and strong with experienced trainers and a friendly space for every one. 
+      At Adrenaline centre, we help you stay fit and strong with experienced
+      trainers and a friendly space for every one.
     </p>
 
-    
+    <section>
+      <h2>Our Team</h2>
+      <table border="1px">
+        <thead>
+          <tr>
+            <th><span style="color: rgb(184, 11, 141)">trainer</span></th>
+            <th><span style="color: rgb(184, 11, 141)">specialty</span></th>
+            <th><span style="color: rgb(184, 11, 141)">experience</span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Yasamin</td>
+            <td>yoga</td>
+            <td>5 years</td>
+          </tr>
+          <tr>
+            <td>Rahil</td>
+            <td>pilates</td>
+            <td>8 years</td>
+          </tr>
+          <tr>
+            <td>Sara</td>
+            <td>martial arts</td>
+            <td>11 years</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </body>
 </html>
