add table for contact information

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -42,8 +42,24 @@
       </table>
     </section>
 
-<h2>contact us</h2>
-<p> We care about you</p>
+    <h2>contact us</h2>
+    <p>We care about you</p>
 
+    <table border="1px">
+      <thead>
+        <tr>
+          <th>contact number</th>
+          <th>email address</th>
+          <th>whatsapp</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>02112345678</td>
+          <td>adrenalincentre.com</td>
+          <td>+989121234567</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
