Add ul for follow us

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -61,5 +61,15 @@
         </tr>
       </tbody>
     </table>
+
+    <section>
+        <h2>Follow Us</h2>
+        <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">youtube</a></li>
+        </ul>
+
+    </section>
   </body>
 </html>
