Add span style color for contact us

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -48,9 +48,9 @@
     <table border="1px">
       <thead>
         <tr>
-          <th>contact number</th>
-          <th>email address</th>
-          <th>whatsapp</th>
+          <th><span style="color: rgb(184, 11, 141)">contact number</span></th>
+          <th><span style="color: rgb(184, 11, 141)">email address</span></th>
+          <th><span style="color: rgb(184, 11, 141)">whatsapp</span></th>
         </tr>
       </thead>
       <tbody>
@@ -63,13 +63,12 @@
     </table>
 
     <section>
-        <h2>Follow Us</h2>
-        <ul>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Instagram</a></li>
-            <li><a href="#">youtube</a></li>
-        </ul>
-
+      <h2>Follow Us</h2>
+      <ul>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">youtube</a></li>
+      </ul>
     </section>
   </body>
 </html>
