--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -73,10 +73,16 @@
   </body>
 
   <h2>Send Us a Message</h2>
- 
-
-
-
-
+  <form action="#">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" />
+    <br />
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" />
+    <br />
+    <label for="text">Message:</label>
+    <input type="text" id="text" name="message" />
+    <br />
+    <button type="submit">Send</button>
   </form>
 </html>
