add section tag

--- a/More Content.html
+++ b/More Content.html
@@ -28,7 +28,7 @@
           accurate. BMI alone does not determine health.
         </p>
       </article>
-      <hr>
+      <hr />
       <article>
         <h2>What is BMI used for?</h2>
         <p>
@@ -42,5 +42,15 @@
         </p>
       </article>
     </main>
+    <hr />
+    <section>
+      <h3>BMI calculation</h3>
+      <h4>To calculate your body mass index, follow these steps in order:</h4>
+      <ol>
+        <li>Find your weight in kilograms.</li>
+        <li>Find your height in meters and square it.</li>
+        <li>And then divide the weight by the height obtained.</li>
+      </ol>
+    </section>
   </body>
 </html>
