add figure & figcaption tag

--- a/More Content.html
+++ b/More Content.html
@@ -52,5 +52,12 @@
         <li>And then divide the weight by the height obtained.</li>
       </ol>
     </section>
+    <figure>
+      <img
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRdAaBanMqGwbM__V9t5dXDmzw_ZTBpfjC-ew&s"
+        alt="BMI calculation formula"
+      />
+      <figcaption>BMI calculation formula</figcaption>
+    </figure>
   </body>
 </html>
