--- a/More Content.html
+++ b/More Content.html
@@ -59,5 +59,54 @@
       />
       <figcaption>BMI calculation formula</figcaption>
     </figure>
+    <hr />
+    <h3>Identifying Weight Types and Potential Health Risks with BMI</h3>
+    <h4>
+      In general, the BMI ranges listed in the table below classify different
+      weight types:
+    </h4>
+
+    <table border="1px">
+      <thead>
+        <tr>
+          <th>BMI</th>
+          <th>STATUS</th>
+          <th>HEALTH RISK</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Below 18.5</td>
+          <td>Underweight</td>
+          <td>Minimal</td>
+        </tr>
+        <tr>
+          <td>18.5 - 24.9</td>
+          <td>Normal</td>
+          <td>Minimal</td>
+        </tr>
+        <tr>
+          <td>25 - 29.9</td>
+          <td>Overweight</td>
+          <td>Increased</td>
+        </tr>
+        <tr>
+          <td>30 - 34.9</td>
+          <td>Obese</td>
+          <td>High</td>
+        </tr>
+        <tr>
+          <td>35 - 39.9</td>
+          <td>Severely Obese</td>
+          <td>Very High</td>
+        </tr>
+        <tr>
+          <td>Above 40</td>
+          <td>Morbidly Obese</td>
+          <td>Extremely High</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
+    </table>
   </body>
 </html>
