Added photoes of social media

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -65,9 +65,9 @@
     <section>
       <h2>Follow Us</h2>
       <ul>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">youtube</a></li>
+        <li><a href="#">Facebook</a><img src="./facebook.png"></li>
+        <li><a href="#">Instagram</a> <img src="./Insta.jpg" /></li>
+        <li><a href="#">youtube</a><img src="./youtube.png"/></li>
       </ul>
     </section>
   </body>
