--- a/Leila.html
+++ b/Leila.html
@@ -101,6 +101,8 @@
 
    <hr>
 
-   <footer></footer>
+   <footer>
+      <p>&copy; 2024 by Adrenaline Sports and Fitness. All rights reserved.</p>
+   </footer>
 </body>
 </html>
