--- a/Leila.html
+++ b/Leila.html
@@ -24,7 +24,7 @@
         <nav class="menu">
             <ul>
               <li><a href="http://127.0.0.1:5500/Leila.html" target="_blank">Home</a></li>
-              <li><a href="#">Classes</a></li>
+              <li><a href="http://127.0.0.1:5500/Fateme.html" target="_blank">Classes</a></li>
               <li><a href="#">Healthy Weight Tools</a></li>
               <li><a href="#">Us</a></li>
             </ul>
