--- a/More Content.html
+++ b/More Content.html
@@ -108,5 +108,20 @@
       </tbody>
       <tfoot></tfoot>
     </table>
+    <hr />
+    <aside>
+      <h5>
+        BMI is not the only factor that providers use to classify weight types,
+        other factors include:
+      </h5>
+      <ul>
+        <li>Waist circumference measurement</li>
+        <li>
+          Measuring skinfold thickness using a folded caliper in specific areas
+          of the body, such as the back of the arms and under the shoulder
+        </li>
+        <li>DEXA scan and ADP air displacement plethysmography</li>
+      </ul>
+    </aside>
   </body>
 </html>
