Chenged a word in paragraph

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -8,7 +8,7 @@
   <body>
     <h1><span style="color: rgb(128, 26, 26)">About Adrenaline Sports and Fitness</span></h1>
     <p>
-      At Adrenaline centre, we help you stay fit and strong with experienced
+      At Adrenaline center, we help you stay fit and strong with experienced
       trainers and a friendly space for every one.
     </p>
 
