--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -8,7 +8,7 @@
   <body>
     <h1><span style="color: rgb(128, 26, 26)">About Adrenaline Sports and Fitness</span></h1>
     <p>
-      At Adrenaline center, we help you stay fit and strong with experienced
+      At Adrenaline club, we help you stay fit and strong with experienced
       trainers and a friendly space for every one.
     </p>
 
@@ -56,7 +56,7 @@
       <tbody>
         <tr>
           <td>02112345678</td>
-          <td>adrenalincentre.com</td>
+          <td>adrenalinclub.com</td>
           <td>+989121234567</td>
         </tr>
       </tbody>
