--- a/More Content.html
+++ b/More Content.html
@@ -123,5 +123,30 @@
         <li>DEXA scan and ADP air displacement plethysmography</li>
       </ul>
     </aside>
+    <hr />
+    <h5>Enter your name, height and weight.</h5>
+    <form action="">
+      <label for="name">name:</label>
+      <input type="text" id="name" name="name" placeholder="name" required />
+      <br />
+      <label for="Height">Height:</label>
+      <input
+        type="number"
+        id="Height"
+        name="Height"
+        placeholder="Height"
+        required
+      />
+      <br />
+      <label for="Weight">Weight:</label>
+      <input
+        type="number"
+        id="Weight"
+        name="Weight"
+        placeholder="Weight"
+        required
+      />
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
