--- a/More Content.html
+++ b/More Content.html
@@ -148,5 +148,13 @@
       />
       <button type="submit">Submit</button>
     </form>
+    <hr />
+    <h4>
+      Click to
+      <a href="https://www.calculator.net/bmi-calculator.html" target="_blank"
+        >calculate your BMI</a
+      >
+      online.
+    </h4>
   </body>
 </html>
