--- a/img/fateme.html
+++ b/img/fateme.html
@@ -6,12 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <p>list of sports in Adrenaline gim</p>
+    <img/>
+    <h1>services of adrenalin centre</h1>
+    <p>list of sports</p>
     <ul>
-        <li>voliieyball</li>
-        <li>basketboll</li>
-        <li>badminton</li>
-        <li>ping pong</li>
+        <li>yoga</li>
+        <li>pilates</li>
+        <li>TRX</li>
+        <li>martial arts</li>
     </ul>
 <table border="1px">
     <thead>
@@ -26,7 +28,7 @@
     </thead>
     <tbody>
         <tr>
-            <td rowspan="2">vollyeball</td>
+            <td rowspan="2">yoga</td>
             <td>sat, mon, wed</td>
             <td>8-10 am</td>
             <td>fateme</td>
@@ -34,7 +36,7 @@
             <td>12 $</td>
         </tr>
         <tr>
-            <!-- <td>vollyeboll</td> -->
+            <!-- <td>yoga</td> -->
             <td>sat, mon, wed</td>
             <td>10-12 am</td>
             <td>fereshte</td>
@@ -42,7 +44,7 @@
             <td>12 $</td>
         </tr>
         <tr>
-            <td rowspan="2">basketboll</td>
+            <td rowspan="2">pilates</td>
             <td>sat, mon</td>
             <td>2-4 pm</td>
             <td rowspan="2">leila</td>
@@ -50,7 +52,7 @@
             <td>8 $</td>
         </tr>
         <tr>
-            <!-- <td>basketboll</td> -->
+            <!-- <td>pilates</td> -->
             <td>sat, mon</td>
             <td>4-6 pm</td>
             <!-- <td>leila</td> -->
@@ -58,7 +60,7 @@
             <td>8 $</td>
         </tr>
         <tr>
-            <td rowspan="2">badminton</td>
+            <td rowspan="2">TRX</td>
             <td>sun, tue, thu</td>
             <td>9-11 am</td>
             <td>fateme zahra</td>
@@ -66,7 +68,7 @@
             <td>12 $</td>
         </tr>
         <tr>
-            <!-- <td>badminton</td> -->
+            <!-- <td>TRX</td> -->
             <td>sun, tue</td>
             <td>1-3 pm</td>
             <td>farnaz</td>
@@ -74,7 +76,7 @@
             <td>8 $</td>
         </tr>
         <tr>
-            <td>ping pong</td>
+            <td>martial arts</td>
             <td>sun, thu</td>
             <td>5-7 pm</td>
             <td>sara</td>
