--- a/img/fateme.html
+++ b/img/fateme.html
@@ -6,14 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <img/>
+    <img src="./3006_1_teaserImg_AdobeStock_440987972.jpeg" alt="pilates"/>
     <h1>services of adrenalin centre</h1>
-    <p>list of sports</p>
+    <p><strong><EM>sports</EM></strong></p>
     <ul>
-        <li>yoga</li>
-        <li>pilates</li>
-        <li>TRX</li>
-        <li>martial arts</li>
+        <li><strong>YOGA</strong></li>
+        <li><strong>PILATES</strong></li>
+        <li><strong>TRX</strong></li>
+        <li><strong>MARTIAL ARTS</strong></li>
     </ul>
 <table border="1px">
     <thead>
@@ -28,10 +28,10 @@
     </thead>
     <tbody>
         <tr>
-            <td rowspan="2">yoga</td>
+            <td rowspan="2">Yoga</td>
             <td>sat, mon, wed</td>
             <td>8-10 am</td>
-            <td>fateme</td>
+            <td rowspan="2">Yasamin</td>
             <td>12</td>
             <td>12 $</td>
         </tr>
@@ -39,15 +39,15 @@
             <!-- <td>yoga</td> -->
             <td>sat, mon, wed</td>
             <td>10-12 am</td>
-            <td>fereshte</td>
+            <!-- <td>yasamin</td> -->
             <td>12</td>
             <td>12 $</td>
         </tr>
         <tr>
-            <td rowspan="2">pilates</td>
+            <td rowspan="2">Pilates</td>
             <td>sat, mon</td>
             <td>2-4 pm</td>
-            <td rowspan="2">leila</td>
+            <td rowspan="2">Rahil</td>
             <td>8</td>
             <td>8 $</td>
         </tr>
@@ -55,7 +55,7 @@
             <!-- <td>pilates</td> -->
             <td>sat, mon</td>
             <td>4-6 pm</td>
-            <!-- <td>leila</td> -->
+            <!-- <td>rahil</td> -->
             <td>8</td>
             <td>8 $</td>
         </tr>
@@ -63,7 +63,7 @@
             <td rowspan="2">TRX</td>
             <td>sun, tue, thu</td>
             <td>9-11 am</td>
-            <td>fateme zahra</td>
+            <td rowspan="2"> Yalda</td>
             <td>12</td>
             <td>12 $</td>
         </tr>
@@ -71,12 +71,12 @@
             <!-- <td>TRX</td> -->
             <td>sun, tue</td>
             <td>1-3 pm</td>
-            <td>farnaz</td>
+            <!-- <td>yalda</td> -->
             <td>8</td>
             <td>8 $</td>
         </tr>
         <tr>
-            <td>martial arts</td>
+            <td>Martial arts</td>
             <td>sun, thu</td>
             <td>5-7 pm</td>
             <td>sara</td>
@@ -85,10 +85,25 @@
         </tr>
     </tbody>
 </table>
-
+<hr/>
+<p>book a class</p>
 <form>
-    <label></label>
-    <input/>
+    <label for=""> name</label>
+     <input type="text" placeholder=" name" id=""  />
+     <br/>
+     <label for="c">class</label>
+<select id="c">
+  <option disabled selected>class</option>
+  <option value="b">yoga</option>
+  <option value="r">pilates</option>
+  <option value="p">TRX</option>
+  <option value="g">martial arts</option>
+  <br/>
+  
+     <label for="">sans</label>
+     <input type="text" placeholder=" sans" id=""  />
+     <br/>
+<button>send</button>
 </form>
 </body>
 </html>
