added a new row in table

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -27,6 +27,7 @@
             <td>Yasamin</td>
             <td>yoga</td>
             <td>5 years</td>
+            
           </tr>
           <tr>
             <td>Rahil</td>
@@ -37,6 +38,11 @@
             <td>Sara</td>
             <td>martial arts</td>
             <td>11 years</td>
+          </tr>
+          <tr>
+            <td>Yalda</td>
+            <td>TRX</td>
+            <td>10 years</td>
           </tr>
         </tbody>
       </table>
