--- a/img/fateme.html
+++ b/img/fateme.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <img src="./3006_1_teaserImg_AdobeStock_440987972.jpeg" alt="pilates"/>
-    <h1>services of adrenalin centre</h1>
+    <h1>services of ADRENALINE club</h1>
     <p><strong><EM>sports</EM></strong></p>
     <ul>
         <li><strong>YOGA</strong></li>
@@ -29,7 +29,7 @@
     <tbody>
         <tr>
             <td rowspan="2">Yoga</td>
-            <td>sat, mon, wed</td>
+            <td>SAT, MON, WED</td>
             <td>8-10 am</td>
             <td rowspan="2">Yasamin</td>
             <td>12</td>
@@ -37,7 +37,7 @@
         </tr>
         <tr>
             <!-- <td>yoga</td> -->
-            <td>sat, mon, wed</td>
+            <td>SAT, MON, WED</td>
             <td>10-12 am</td>
             <!-- <td>yasamin</td> -->
             <td>12</td>
@@ -45,7 +45,7 @@
         </tr>
         <tr>
             <td rowspan="2">Pilates</td>
-            <td>sat, mon</td>
+            <td>SAT, MON</td>
             <td>2-4 pm</td>
             <td rowspan="2">Rahil</td>
             <td>8</td>
@@ -53,7 +53,7 @@
         </tr>
         <tr>
             <!-- <td>pilates</td> -->
-            <td>sat, mon</td>
+            <td>SAT, MON</td>
             <td>4-6 pm</td>
             <!-- <td>rahil</td> -->
             <td>8</td>
@@ -61,7 +61,7 @@
         </tr>
         <tr>
             <td rowspan="2">TRX</td>
-            <td>sun, tue, thu</td>
+            <td>SUN, TUE, THU</td>
             <td>9-11 am</td>
             <td rowspan="2"> Yalda</td>
             <td>12</td>
@@ -69,7 +69,7 @@
         </tr>
         <tr>
             <!-- <td>TRX</td> -->
-            <td>sun, tue</td>
+            <td>SUN, TUE</td>
             <td>1-3 pm</td>
             <!-- <td>yalda</td> -->
             <td>8</td>
@@ -77,7 +77,7 @@
         </tr>
         <tr>
             <td>Martial arts</td>
-            <td>sun, thu</td>
+            <td>SUN, THU</td>
             <td>5-7 pm</td>
             <td>sara</td>
             <td>8</td>
