making changes to h1

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1><span style="color: rgb(128, 26, 26)">About Adrenaline Sports and Fitness</span></h1>
+    <h1><span style="color: rgb(128, 26, 26)">About Adrenaline Sports and Fitness club</span></h1>
     <p>
       At Adrenaline club, we help you stay fit and strong with experienced
       trainers and a friendly space for every one.
