making a change on email adress

--- a/Fereshteh.html
+++ b/Fereshteh.html
@@ -62,7 +62,7 @@
       <tbody>
         <tr>
           <td>02112345678</td>
-          <td>adrenalinclub.com</td>
+          <td>adrenalineclub.com</td>
           <td>+989121234567</td>
         </tr>
       </tbody>
