--- a/Leila.html
+++ b/Leila.html
@@ -54,20 +54,20 @@
 
                 <tbody>
                   <tr>
-                     <td>Volleyball</td>
+                     <td>Yoga</td>
                      <td>BMI calculator</td>
                   </tr>
                   <tr>
-                     <td>Basketball</td>
-                     <td>Identifying weight types</td>
+                     <td>Pilates</td>
+                     <td rowspan="3">Identifying weight types</td>
                  </tr>
                  <tr>
-                     <td>Badminton</td>
-                     <td></td>
+                     <td>TRX</td>
+                     <!-- <td></td> -->
                  </tr>
                  <tr>
-                    <td>Ping pong</td>
-                    <td></td>
+                    <td>Martial arts</td>
+                    <!-- <td></td> -->
                  </tr>
                 </tbody>
             </table>
@@ -75,7 +75,7 @@
 
         <section>
             <h2>Membership</h2>
-            <p>Start your fitness journey by making appointment to speak with an Adrenaline staff member today. For your convenience you can also browse our options and prices on the <mark>Classes</mark> page. We look forward to seeing you!</p>
+            <p>Start your fitness journey by making appointment to speak with an Adrenaline staff member today. For your convenience you can also browse our options and prices on the <mark><strong>Classes</strong></mark> page. We look forward to seeing you!</p>
             <h4>Membership Registration Form:</h4>
             <form action="#">
                 <label for="name">Name:</label>
