--- a/Leila.html
+++ b/Leila.html
@@ -23,7 +23,7 @@
 
         <nav class="menu">
             <ul>
-              <li><a href="http://127.0.0.1:5500/Leila.html" target="_blank">Home</a></li>
+              <li><a href="./Leila.html" target="_blank">Home</a></li>
               <li><a href="./img/fateme.html" target="_blank">Classes</a></li>
               <li><a href="./More Content.html" target="_blank">Healthy Weight Tools</a></li>
               <li><a href="./Fereshteh.html" target="_blank">Us</a></li>
